# Capstone_Project

./: .gitmodules  10) Quaternions.docx  11) NeuralNet.docx  12_Camera.docx  13_profilers.docx  2) Build OPENCV for CUDA.docx  3) Build with cuDnn.docx  4) setting up teleop.docx  5) Getting started with Octomap.docx  6) Motion plannign with OMPL.docx  7) TF listener.docx  8) Get warp perspective.docx  9) Kalman Filter.docx  README.md  Ubuntu_setup.docx  activate_conda.bat  capstone.bat
NXTBot/: NXTBot.cpp  NXTBot.sln  NXTBot.vcxproj  NXTBot.vcxproj.filters
Redundant/NXTBotCpp/: NXTBot.vcxproj  NXTBot.vcxproj.filters  main.cpp  nxt_setup.cpp  nxt_setup.h
Redundant/NXTBotCpp/nxt-plus-plus/: Changelog.txt  README.txt
Redundant/NXTBotCpp/nxt-plus-plus/examples/: nxtpp_07_demo.txt
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/NXT++ test/: NXT++ test.sln
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/NXT++ test/NXT++ test/: NXT++ test.cpp  NXT++ test.vcproj
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/RC robot/: RC robot.sln
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/RC robot/RC robot/: RC robot.cpp  RC robot.vcproj
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/Room Explorer/: Room Explorer.sln
Redundant/NXTBotCpp/nxt-plus-plus/examples/vs90_projects/Room Explorer/Room Explorer/: Room Explorer.vcproj  main.cpp
Redundant/NXTBotCpp/nxt-plus-plus/nxtpp_07/src/: comm.cpp  nxt++.cpp
catkin_ws/src/: CMakeSettings.json
catkin_ws/src/camera_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/camera_publisher/assets/: g5.yaml
catkin_ws/src/camera_publisher/include/: main.h
catkin_ws/src/camera_publisher/launch/: orb_slam2_g5.launch  publisher.launch
catkin_ws/src/camera_publisher/scripts/: camera_info_publisher.py  camera_publisher.py
catkin_ws/src/camera_publisher/src/: main.cpp
catkin_ws/src/cv_bridge/: CMakeLists.txt
catkin_ws/src/cv_bridge/include/cv_bridge/: cv_bridge.h
catkin_ws/src/network_package/mqtt/: CMakeLists.txt  mqtt.cpp
catkin_ws/src/nxtbot/: CMakeLists.txt  ReadME.md  package.xml
catkin_ws/src/nxtbot/include/: image_to_grid.h  octomap_header.h  tensorflow_inference.h  tf.h
catkin_ws/src/nxtbot/launch/: nxt.launch  nxt_prediction.launch  utils.launch
catkin_ws/src/nxtbot/rviz/: config_file.rviz
catkin_ws/src/nxtbot/scripts/: nxt_pub.py  semantic_segmentation_tf2.ipynb
catkin_ws/src/nxtbot/src/: convert2angles.cpp  get_homography.cpp  image_to_grid.cpp  main.cpp  mqtt_subscribe.cpp  nxtpp_pub.cpp  occupancy_image.cpp  octomap_trial.cpp  path_planning.cpp  read_from_cam.cpp  tensorflow_inference.cpp  tf_listener.cpp
catkin_ws/src/vision_package/: CMakeLists.txt
catkin_ws/src/vision_package/script/: convert.py  rename_files.py  semantic_segmentation_tf.ipynb  torchvision_finetuning_instance_segmentation.ipynb
catkin_ws/src/vision_package/src/: chessBoard.cpp  pytorchbas.cpp  simplenn.cpp
catkin_ws/src/vision_package/tfcc/: CMakeLists.txt  README.md  tfcc.cpp  tflite.cpp
catkin_ws/src/vision_package/tfcc/scripts/: semantic_segmentation_tf.ipynb
